# taskanline-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  upgrade-api.sh
database/: taskanline.sqlite3
docs/: architecture.md  contributing.md  index.md  installation.md  usage.md
src/: main.py
src/api/v1/: __init__.py  auth.py
src/core/: config.py  depends.py  security.py
src/crud/: auth.py
src/database/: session.py
src/models/: __init__.py  users.py
src/schemas/: auth.py
