[project]
name = "TasKanLine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
]
